# ytmusic-service

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Containerfile  Dockerfile  README.md  build.rs
.github/workflows/: ci.yml  release-image.yml
crates/ytmusic-service/: Cargo.toml
crates/ytmusic-service-client/: Cargo.toml
crates/ytmusic-service-client/src/: error.rs  lib.rs
crates/ytmusic-service-proto/: Cargo.toml  build.rs
crates/ytmusic-service-proto/proto/ytmusic/v1/: admin.proto
crates/ytmusic-service-proto/proto/ytmusic/v2/: cipher.proto  common.proto  music.proto  status.proto
crates/ytmusic-service-proto/src/: lib.rs
crates/ytmusic-service-proto/tests/: generated_exports.rs
crates/ytmusic-service/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/ytmusic-service/src/adapters/: ytmusic.rs
crates/ytmusic-service/src/servers/: admin.rs  cipher.rs  mod.rs  music.rs  music_mapping.rs  public.rs  status.rs
crates/ytmusic-service/tests/: cipher_status.rs  client.rs  live_smoke.rs  music_library_account.rs  music_search_watch_song.rs  public_api.rs  reload.rs  startup.rs
crates/ytmusic-service/tests/fixtures/account/raw/: account_info.json
crates/ytmusic-service/tests/fixtures/library_playlists/raw/: response1.json
crates/ytmusic-service/tests/fixtures/liked_songs/raw/: response1.json
crates/ytmusic-service/tests/fixtures/search/raw/: songs_authenticated.json
crates/ytmusic-service/tests/fixtures/song/raw/: response1.json
docs/: API.md
docs/superpowers/plans/: 2026-05-16-ytmusic-service-implementation.md  2026-05-17-readme-usage-guide-implementation.md  2026-05-17-readme-user-centered-quickstart-implementation.md
docs/superpowers/specs/: 2026-05-16-ytmusic-service-design.md  2026-05-17-readme-usage-guide-design.md  2026-05-17-readme-user-centered-quickstart-design.md  2026-05-20-rust-workspace-proto-refactor-design.md
proto/ytmusic/v1/: public.proto
src/: adapters.rs  auth_context.rs  config.rs  error.rs  lib.rs  proto.rs  state.rs
src/adapters/: cipher.rs  mod.rs
src/servers/: admin.rs  mod.rs  public.rs
tests/: public_api.rs  reload.rs  startup.rs
