[package]
name = "ytmusic-service"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
arc-swap = "1.7"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tonic = { version = "0.12", features = ["transport"] }
tonic-health = "0.12"
tonic-reflection = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
yt-cipher = { git = "https://github.com/ghfhffh12345/yt-cipher.git", tag = "v0.1.0" }
ytmusicapi = { git = "https://github.com/ghfhffh12345/ytmusicapi.git", tag = "v0.1.0" }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
