[package]
name = "ytmusic-service"
version.workspace = true
edition.workspace = true

[dependencies]
arc-swap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
yt-cipher.workspace = true
ytmusicapi.workspace = true
ytmusic-service-proto = { path = "../ytmusic-service-proto" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
